[package]
name         = "cryptobox"
version      = "1.0.0"
authors      = ["Wire Swiss GmbH <support@wire.com>"]
description  = "High-level API for proteus with persistent storage."
homepage     = "https://github.com/wireapp/cryptobox"
repository   = "git@github.com:wireapp/cryptobox.git"
license      = "GPL-3.0"

[dependencies]
byteorder  = ">= 0.5.1"
cbor-codec = ">= 0.7.0"
proteus    = { git = "https://github.com/wireapp/proteus", branch = "develop" }
r2d2 = "0.8"
r2d2_postgres = "0.14"   # newer version, uses postgres 0.12
postgres = { version = "0.15", features = ["with-uuid"] }
uuid = { version = "0.6", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
