[package]
name         = "cryptobox"
version      = "1.0.2"
authors      = ["Wire Swiss GmbH <support@wire.com>"]
description  = "High-level API for proteus with persistent storage."
homepage     = "https://github.com/wireapp/cryptobox"
repository   = "git@github.com:wireapp/cryptobox.git"
license      = "GPL-3.0"

[dependencies]
byteorder  = ">= 0.5.1"
cbor-codec = ">= 0.7.0"
proteus    = { git = "https://github.com/wireapp/proteus", tag = "v1.0.2" }

