[package]
name         = "cryptobox-c"
version      = "0.5.1"
authors      = ["Roman S. Borschel <roman@pkaboo.org>", "Toralf Wittner <tw@dtex.org>"]
description  = "C-FFI to cryptobox"
homepage     = "https://github.com/shared-secret/cryptobox/cryptobox-c"
repository   = "git@github.com:shared-secret/cryptobox.git"
license      = "MPL-2.0"

[lib]
name         = "cryptobox"
crate-type   = ["dylib"]

[dependencies]
libc = ">= 0.1.12"

[dependencies.proteus]
git    = "https://github.com/shared-secret/proteus"
branch = "develop"

[dependencies.cryptobox]
path   = "../cryptobox"
