[package]
name         = "cryptobox"
version      = "0.5.0"
authors      = ["Roman S. Borschel <roman@pkaboo.org>", "Toralf Wittner <tw@dtex.org>"]
description  = "High-level API for proteus with persistent storage."
homepage     = "https://github.com/romanb/cryptobox"
repository   = "git@github.com:romanb/cryptobox.git"
license      = "MPL-2.0"

[dependencies]
byteorder  = ">  0.3.0"
cbor-codec = ">= 0.4.1"

[dependencies.proteus]
git = "https://github.com/twittner/proteus"
tag = "v0.3.0"
